<resources>
    <string name="app_name">Story App</string>
    <string name="login">Login</string>
    <string name="email">Isikan Email</string>
    <string name="password">Isikan Password</string>
    <string name="register">Register</string>
    <string name="name">Nama</string>
    <string name="warning_email">Format Email Salah</string>
    <string name="warning_password">Password harus memiliki minimal 6 karakter</string>
    <string name="warning_name">Nama tidak boleh kosong</string>
    <string name="success_login">Login sukses</string>
    <string name="failed_login">Login gagal</string>
    <string name="success_register">Register sukses</string>
    <string name="failed_register">Register gagal</string>
    <string name="logout">Logout</string>
    <string name="load_story_failed">Story gagal dimuat</string>
    <string name="load_story_success">Story sukses dimuat</string>
    <string name="menu_add_story">Menu Tambah Story</string>
    <string name="details_story">Detail Story</string>
    <string name="create_story">Create Story</string>
    <string name="desc">Deskripsi</string>
    <string name="description">Isi deskripsi</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="permission_denied">Permission denied</string>
    <string name="success_upload">Upload sukses</string>
    <string name="failed_upload">Upload gagal</string>
    <string name="failed_take_picture">Gagal mengambil gambar</string>
    <string name="failed_show_camera">Gagal menampilkan kamera</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_map_stories">Maps Stories Activity</string>
    <string name="maps">Google Maps</string>
    <string name="maps_stories">Maps Stories</string>
    <string name="not_found_location">Lokasi kamu tidak ketemu. Coba Lagi</string>
    <string name="you_location">Lokasi Kamu</string>
    <string name="story_upload">Story dari :</string>
    <string name="story_desc">Deskripsi :</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Coba Lagi</string>

</resources>